--- a/secondssheets/command_successfull.html
+++ b/secondssheets/command_successfull.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="../front-end/style.css" />
         <title>Détails du Produit</title>
@@ -11,14 +11,14 @@
 
     <body>
 
-        <!--header-->
+        <!--************header*******************-->
         <header class="colorino">
             <div class="container-fluid">
             <div class="row">
                 <div class="col">
                 <nav class="d-flex navbar navbar-expand-lg navbar-light">
                     <a href="../front-end/index.html" class="navbar-brand">
-                    <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+                    <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                     <span class="navbar-toggler-icon"></span>
@@ -28,18 +28,16 @@
             </div>
             </div>
         </header>
-                    <!--main-->
+        <!--************************main***********************-->
     
         <main class="flex flex-col justify-center w-full py-16 my-4 rounded-lg bg-oniPink">
             <h1 class="mb-4 text-4xl font-weight-bold text-center">Nous vous remercions pour votre commande d'un montant de <span class="totalPrice text-primary"></span> numéro <span id="orderId" class="text-danger"></span>.<br />À bientôt !</h1>
-            <a class="row" href="../front-end/index.html">
-            <button class="inline-block px-4 py-2 mx-auto text-center text-white bg-primary font-weight-bold rounded">Retour à l'accueil </button>
-        </a>
+            <div class="text-center"><a class="inline-block px-4 py-2 mx-auto text-white bg-primary font-weight-bold rounded" href="../front-end/index.html">Retour à l'accueil</a></div>
         </main>
-            <!--   footer-->
+            <!--*************************footer***********************-->
         <footer class="container-fluid colorino">
             <a href="../front-end/index.html">
-            <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+            <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
             </a>
             <div class="row text-center">
               <div class="col">  
