--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
-        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="../front-end/style.css" />
         
@@ -15,14 +15,14 @@
 
     </head>
     <body>
-      <!----------------------------HEADER-->
+      <!--*************************HEADER***************-->
     <header class="colorino">
         <div class="container-fluid">
         <div class="row">
             <div class="col">
             <nav class="d-flex navbar navbar-expand-lg navbar-light">
                 <a href="index.html" class="navbar-brand">
-                <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+                <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
                 </a>
                 <button
                 class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -47,7 +47,7 @@
     <main class="container">
               <template id="template-article" class="row main">
                 <div class="col-11 col-md-5 card colorino p-2 m-2">
-                <img class="imageUrl" class=" object-cover" src="" alt="ours en peluche">
+                <img class="imageUrl object-cover" src="" alt="ours en peluche">
                   <div class="card-body" >  
                       <div class="row">
                         <p class="name h5 col-8 col-sm-10 col-md-8 col-lg-9 text-left"></p>
@@ -63,10 +63,10 @@
                 </div>
               </template>
     </main>
-    <!---------------------------FOOTER-->
+    <!--******************************FOOTER*************************************-->
     <footer class="container-fluid colorino">
         <a href="index.html">
-        <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+        <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
         </a>
         <div class="row text-center">
           <div class="col">  
