--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Page panier Orinoco"/>
     
-    <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="../front-end/style.css" />
 
@@ -14,14 +14,14 @@
 
   </head>
   <body>
-    <!-- Header with navigation bar -->
+    <!--********************Header with navigation bar************************-->
     <header class="colorino">
       <div class="container-fluid">
         <div class="row">
           <div class="col">
             <nav class="d-flex navbar navbar-expand-lg navbar-light">
               <a href="../front-end/index.html" class="navbar-brand">
-                <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+                <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
               </a>
               <button
                 class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -45,7 +45,7 @@
     <!-- Main content of the page contains a table of products in the cart and a form to complete the order-->
     <main class="container p-4">
       <div class="row mt-4">
-        <!-- Products in the cart -->
+        <!--*****************************Products in the cart***************-->
         <div class="col">
           <h1 class="my-3">Votre Panier</h1>
           <table class="table table-secondary table-hover align-items-end font-size">
@@ -58,7 +58,10 @@
               </tr>
             </thead>
             <tbody class="tableCart " id="tableCart">
-              <td class="bg-white border text-center" colspan="5">Votre panier est vide</td>
+              <tr>
+               <td class="bg-white border text-center" colspan="5">Votre panier est vide</td>
+              </tr>
+            </tbody>
             <tfoot>
               <tr class="totalCart colorino border rounded" id="totalCart">
                 <td class="col-1"></td>
@@ -67,10 +70,10 @@
                 <td class="col-1"></td>
               </tr>
             </tfoot>
-            </tbody>
+
           </table>
         </div>
-        <!-- Order form-->
+        <!--*****************Order form***************************-->
         <div class="card col-12 col-md-6 m-0 colorino">
           <form id="myForm">
             <div class="form-row">
@@ -111,10 +114,10 @@
         </div>
       </div>
     </main>
-    <!---------------------------FOOTER-->
+    <!--**********************************FOOTER******************************-->
     <footer class="container-fluid colorino">
       <a href="../front-end/index.html">
-        <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+        <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
       </a>
         <div class="row text-center">
             <div class="col">  
