--- a/secondssheets/teddy.html
+++ b/secondssheets/teddy.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="../front-end/style.css" />
         <title>Ours en peluche</title>
@@ -20,7 +20,7 @@
             <div class="col">
             <nav class="d-flex navbar navbar-expand-lg navbar-light">
                 <a href="../front-end/index.html" class="navbar-brand">
-                <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+                <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
                 </a>
                 <button
                 class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -48,7 +48,7 @@
               <img class="imageUrl" src="" alt="ours en peluche">
               <div class="card-body">
                   <label for="teddy_colors ">Choisissez une couleur</label>
-                  <select name="teddy_colors" class="select-colors-teddy" id="select-colors-teddy" class="rounded bg-white">
+                  <select name="teddy_colors" class="select-colors-teddy rounded bg-white" id="select-colors-teddy">
                   </select>
                 <div class="row storage" id="storage">
                     <p class=" h5 my-3 col-9 col-sm-10 col-md-8 col-lg-9" id="name"><span class="name"></span></p>
@@ -68,7 +68,7 @@
   <!--****************************footer*******************************-->
     <footer class="container-fluid colorino">
         <a href="../front-end/index.html">
-        <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+        <img src="../front-end/images/logo.png" alt="logo orinoco" width="186">
         </a>
         <div class="row text-center">
           <div class="col">  
