--- a/secondssheets/teddy.html
+++ b/secondssheets/teddy.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="../front-end/style.css" />
         <title>Ours en peluche</title>
         
-        <script src="../back/article.js"></script>
-        <script src="../back/cart.js"></script>
+        <script src="../front-end/js/article.js"></script>
+        <script src="../front-end/js/cart.js"></script>
 
     </head>
     <body>
